bacon entry edge case

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
       </div>
       <div class="mainContent panel col col-xs-10 col-s-8 col-m-6">
         <h1 class="title">Is Bacon Better?</h1>
-        <label for="anything">Is Bacon Better Than: 
-          <input id= "anything" class="form-control" type="text" name="anything" placeholder="">
-        </label>
+        <p class="question" id="question">Is Bacon Better Than:</p> 
+        <input id= "anything" class="form-control" type="text" name="anything" placeholder="">
         <button id="submitButton" class="btn btn-default btn-lg btn-block">Submit</button>
         <h1 id="answer" class="answer">Yes.</h1>
         <!-- injecting a sentence in this p tag.  -->
